crates/uitest/fixtures/mir_check/match_pattern_owned_view_param.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/match_pattern_owned_view_param.fe
---
error[10-0002]: move conflict in `fn match_pattern_owned_view_param`
  ┌─ match_pattern_owned_view_param.fe:6:11
  │
6 │     match foo {
  │           ^^^ cannot move out of a view parameter
